--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost/aulajpa?useSSL=false&amp;serverTimezone=UTC
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
